# ESP32-S3-C

./: .gitignore  CMakeLists.txt  README.md  Talleres_ESP32.md  leeme.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Untitled-1.c  Untitled-2.c  Untitled-3.c  Untitled-4.c  chatgepeto.c  conexion_wifi_funciona.c  dos_tareas_mas_cola.c  funciona.c  funcionaaaaaaaa.c  main.c  main_viejo_funcionaba.cpp  prueba_wifi.c  real_time_stats_example_main.c  timer.c  timer_mas_cola.c
